This commit fixes screen layout issues and margins on the header and footer

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ html {
     text-decoration: none;
     color: #ffffff;
     font-weight: bolder;
+    font-size: 13px;
 }
 .main .member .btn{
     text-decoration: none;
@@ -76,6 +77,7 @@ html {
     padding: 20px;
     border-radius: 5px;
     right: 90px;
+    font-size: 14px;
 }
 .main .member .btn a:hover {
     transform: 0.5s ease 0s;
@@ -115,7 +117,7 @@ html {
     font-weight: bold;
     color: #ffffff;
     background: #22a6f0;
-    width: 200px;
+    width: 210px;
     padding: 20px;
     text-align: center;
     border-radius: 30px;
@@ -129,7 +131,7 @@ html {
     font-weight: bold;
     color: #ffffff;
     background: #22a4f000;
-    width: 200px;
+    width: 210px;
     padding: 20px;
     text-align: center;
     border-radius: 30px;
